someone deleted overflowX= hidden, big, big bug

--- a/client/src/pages/landing/story/story.styles.scss
+++ b/client/src/pages/landing/story/story.styles.scss
@@ -11,14 +11,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
 
     &--header {
       font-size: 2rem;
       text-align: center;
-      line-height: 4;
-      height: 10vh;
-      margin-top: 10vh;
+      // height: 10vh;
+      margin-top: 3rem;
       color: var(--primary-black);
       @media (max-width: 600px) {
         margin-top: 3vh;
